--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-  "@babel/plugin-proposal-private-property-in-object": "^*"  },
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
